[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/UI/Pause.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/OptionsMenu.tscn" type="PackedScene" id=2]

[node name="Pause" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.364706 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.25
anchor_top = 0.2
anchor_right = 0.75
anchor_bottom = 0.85
custom_constants/separation = 25

[node name="Pause" type="Label" parent="VBoxContainer"]
margin_right = 512.0
margin_bottom = 14.0
text = "PAUSE"
align = 1

[node name="Resume" type="Button" parent="VBoxContainer"]
margin_top = 39.0
margin_right = 512.0
margin_bottom = 59.0
text = "Resume"

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 512.0
margin_bottom = 104.0
text = "Settings"

[node name="ReturnToTitle" type="Button" parent="VBoxContainer"]
margin_top = 129.0
margin_right = 512.0
margin_bottom = 149.0
text = "Return to Title"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 174.0
margin_right = 512.0
margin_bottom = 194.0
text = "Quit"

[node name="SettingsMenu" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/ReturnToTitle" to="." method="_on_ReturnToTitle_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
